# orb-weaver

./: .gitignore  README.md  pyproject.toml  requirements.txt
orb/: __init__.py
orb/common/design/: welcome_page.py
orb/common/proxies/: get_proxies.py  test_proxies.py
orb/common/user_agents/: user_agents.py
orb/common/vpn/: __init__.py  pia.py
orb/scraper/: utils.py
orb/scraper/utils/: utils.py
orb/spinner/: utils.py
orb/spinner/core/: driver.py
orb/spinner/utils/: spoofing.py
orb/src/: testing.ipynb
orb/src/proxies/: get_proxies.ipynb
orb/utils/: __init__.py  decorators.py  proxies.py  user_agents.py  utils.py  vpn.py
tests/orb/common/proxies/: test_get_proxies.py  test_test_proxies.py
tests/orb/spinner/core/: test_driver.py
tests/utils/: proxies.py
