[tool.poetry]
name = "orb"
version = "0.1.0"
description = ""
authors = ["Tom Freeman"]
packages = [{ include = "orb" }]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
pandas = "^2.1.4"
requests = "^2.31.0"
selenium = "^4.16.0"
webdriver-manager = "^4.0.1"
fake-useragent = "^1.4.0"
ipykernel = "^6.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
